fix dark mode colour glitch on service details

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -385,6 +385,7 @@ a.active-animation:active{
   background-color:#b1d1de;
   border-radius: 20px;
   max-width: 150px;
+  color: black;
 }
 
 @media only screen and (max-width: 318px) {
